--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ h2{
 }
 .btn2 {
   position: absolute;
-  top: 147%;
+  top: 1050px;
   left: -24%;
   border: none;
   border-radius: 25px;
@@ -190,14 +190,14 @@ h2{
 
 .btn3 {
   position: absolute;
-  top: 278%;
+  top: 1990px;
   left: -24%;
   border: none;
   border-radius: 25px;
   background-color: black;
   color: white;
   margin-left: 50%;
-  margin-top: 60%;
+  margin-top: 59%;
   padding: 14px 28px;
   font-size: 16px;
   cursor: pointer;
