--- a/css/layout2.css
+++ b/css/layout2.css
@@ -30,7 +30,10 @@ text-decoration: none;
   background-color: #F1F1F1;
   color:#000000;
 }
-
+svg{
+  width:17px;
+  fill:black;
+}
 li a:hover {
   background-color: #F1F1F1;
   color:#000000;
@@ -96,8 +99,8 @@ h2{
 }
 .description{
   display: block;
-  font-size: 25px;
-  margin-top: 100px;
+  font-size: 20px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 55px;
